test/tests/stages/18_structures/invalid_types/tag_resolution/address_of_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(foo)
  =
  {
  const int(0)
  }
  ;
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(s)
  *
  identifier(ptr)
  =
  &
  identifier(foo)
  ;
  }
